# CFPQ_Evaluator

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: mock_solver.py
examples/tiny/: datasets_bundle.csv  solvers.toml
examples/tiny/dataset/grammar/: a_star.cnf
examples/tiny/dataset/graph/: a.mtx
src/cfpq_evaluator/: cli.py  config.py  engine.py  graphs.py  reporting.py  runners.py  solver_adapters.py
tests/: test_cli.py  test_config.py  test_engine.py  test_graphs.py  test_reporting.py  test_runners.py  test_solver_adapters.py
